Thu Aug 14 02:22:24 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/send-im.png:
	  - Updated the IM icon.

Thu Aug 14 02:10:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/protocols/small/irc.png:
	  - Updated the IRC protocol icon.

Thu Aug 14 02:03:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Changed the Add button to drop down a menu, which currently
	    contains Add Buddy and Add Group, and will later have Add Chat.

Thu Aug 14 01:41:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimInputDialog.cpp:
	* src/QGaimInputDialog.h:
	* src/QGaimRequest.cpp:
	* src/QGaimRequest.h:
	* gaim.pro:
	  - Added QGaimInputDialog, and fixed the gaim_request_input UI.

Thu Aug 14 01:38:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimNotify.cpp:
	  - Synced with the latest 0.67cvs API changes.

Wed Aug 13 09:39:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	  - Remove the dependency on OSCAR from the account editor.

Sun Aug 10 14:19:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - QToolButton -> QAction.

Sun Aug 10 13:57:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Moved Show Offline Buddies into a settings/display menu.

Sun Aug 10 01:35:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Disabled the User Actions button.

Sun Aug 10 01:33:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The last character in the text sent is no longer stripped when
	    pressing the Send button instead of pressing Enter.
